<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/margen">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <ImageView
            android:id="@+id/ivDoctor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_centerHorizontal="true"
            android:src="@drawable/doctor" />

        <EditText
            android:id="@+id/etUsuario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/usuario"
            android:textColorHint="@color/naranja"
            android:singleLine="true"/>

        <EditText
            android:id="@+id/etClave"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/etUsuario"
            android:layout_marginTop="@dimen/margen"
            android:hint="@string/clave"
            android:textColorHint="@color/naranja"
            android:inputType="textPassword"
            android:singleLine="true"/>

        <Button
            android:id="@+id/bIngresa"
            style="@style/style_button_inicio"
            android:layout_width="match_parent"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="15dp"
            android:text="@string/ingresa"
            />


    </LinearLayout>

    <TextView
        android:id="@+id/tv_version"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="15dp"
        android:layout_marginRight="15dp"
        android:text="@string/app_version"
        android:textColor="#404040" />

</RelativeLayout>
