<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/margen"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margen"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/paciente" />

        <Spinner
            android:id="@+id/sPaciente"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margen"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/fecha" />

        <TextView
            android:id="@+id/tvFechaCita"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:textColorHint="@color/naranja" />

        <ImageButton
            android:id="@+id/ibFechaCita"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/gris200"
            android:src="@drawable/fecha" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margen"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/hora_inicio" />

        <TextView
            android:id="@+id/tvInicio"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:textColorHint="@color/naranja" />

        <ImageButton
            android:id="@+id/ibInicio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/gris200"
            android:src="@drawable/inicio" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margen"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/hora_fin" />

        <TextView
            android:id="@+id/tvFin"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2" />

        <ImageButton
            android:id="@+id/ibFin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/gris200"
            android:src="@drawable/fin" />

    </LinearLayout>

    <CheckBox
        android:id="@+id/chDomicilio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/pregunta" />


</LinearLayout>
