<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/dlMenu"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/margen">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <DatePicker
            android:id="@+id/dpFechaCita"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:calendarViewShown="false"
            android:spinnersShown="true" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rvCita"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="250dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="@color/gris300"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvDoctor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"/>

        <ImageView
            android:id="@+id/ivDoctor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            />

        <TextView
            android:id="@+id/tvNuevoPaciente"
            android:layout_width="match_parent"
            android:layout_height="@dimen/alto_boton"
            android:layout_marginLeft="@dimen/margen"
            android:drawableLeft="@drawable/nuevopaciente"
            android:gravity="center"
            android:text="@string/nuevo_paciente" />

        <TextView
            android:id="@+id/tvListarPacientes"
            android:layout_width="match_parent"
            android:layout_height="@dimen/alto_boton"
            android:layout_marginLeft="@dimen/margen"
            android:drawableLeft="@drawable/listarpacientes"
            android:gravity="center"
            android:text="@string/listar_pacientes" />

        <TextView
            android:id="@+id/tvNuevaCita"
            android:layout_width="match_parent"
            android:layout_height="@dimen/alto_boton"
            android:layout_marginLeft="@dimen/margen"
            android:drawableLeft="@drawable/nuevacita"
            android:gravity="center"
            android:text="@string/nueva_cita" />

        <TextView
            android:id="@+id/tvCerrar"
            android:layout_width="match_parent"
            android:layout_height="@dimen/alto_boton"
            android:layout_marginLeft="@dimen/margen"
            android:drawableLeft="@drawable/cerrar"
            android:gravity="center"
            android:text="@string/cerrar" />


    </LinearLayout>

</android.support.v4.widget.DrawerLayout>
