<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/tarjeta"
    android:layout_marginBottom="@dimen/dos"
    android:padding="@dimen/margen"
    >

    <TextView
        android:id="@+id/itvrvIdCita"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/itvrvPacienteRV"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2" />

        <ImageView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@drawable/ver" />
    </LinearLayout>

    <TextView
        android:id="@+id/itvrvIdPacienteRV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/hora_inicio" />

        <TextView
            android:id="@+id/itvrvHoraInicio"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/hora_fin" />

        <TextView
            android:id="@+id/itvrvHoraFin"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2" />

    </LinearLayout>

    <TextView
        android:id="@+id/itvrvFechaCita"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible" />


    <CheckBox
        android:id="@+id/icbrvPregunta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:enabled="false"
        android:text="@string/pregunta" />


</LinearLayout>